logical plan impl